Inserindo outras automações, e alteração em Anotações

--- a/gulp/index.html
+++ b/gulp/index.html
@@ -14,13 +14,13 @@
       <img src="img/castelo.jpg" alt="Castelo" />
     </div>
     <div class="modal-content">
-      <h1>Curso de Web Design</h1>
+      <h1>Minha mãe é uma velha</h1>
       <p>Curso para iniciante e pessoas que pretendem se atualizar. Do design ao código, utilizando HTML5, CSS3, jQuery e com um design responsivo.</p>
       <a href="" class="btn">Mais Sobre</a>
     </div>
   </div>
 
-  <script src="js/img.js"></script>
-  <script src="js/modal.js"></script>
+  <script src="js/assets_js/img.js"></script>
+  <script src="js/assets_js/modal.js"></script>
 </body>
 </html>
